Fix stretching on spreads on narrow windows in Fit Height

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@
     padding: 0;
     box-sizing: border-box;
 
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
 }
 
 .hidden {
@@ -40,8 +41,8 @@ body {
 }
 
 main {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-rows: 40px calc(100% - 40px);
 
     /* padding: 10px; */
 
@@ -52,7 +53,6 @@ main {
     /* center the input, details, controls, and viewer */
     align-items: center;
     justify-items: center;
-
 
     /* display: grid; */
     /* grid-template-rows: 20px calc(100% - 140px); */
@@ -70,8 +70,7 @@ main {
     /* center the input, details, and controls */
     align-items: center;
     justify-items: center;
-    padding-top: 15px;
-    padding-bottom: 5px;
+    padding: 5px;
 }
 
 .input {
@@ -110,6 +109,8 @@ main {
 
 .viewer {
     text-align: center;
+
+    user-select: none;
 }
 
 /* viewer fit height */
@@ -119,7 +120,7 @@ main {
 
     height: 100%;
     width: 100%;
-    padding-bottom: 45px;
+    padding: 0;
 }
 
 .viewer.fit .page {
@@ -128,6 +129,9 @@ main {
 
     height: 100%;
     /* width: 100%; */
+    display: block;
+    height: auto;
+    object-fit: contain;
 }
 
 /* viewer fit width */
@@ -191,7 +195,6 @@ main {
     padding-left: 2em;
 }
 
-
 /* DROPZONE */
 
 #dropzone {
@@ -220,7 +223,6 @@ main {
 }
 
 /* ZOOM */
-
 
 .zoom {
     position: fixed;
@@ -255,11 +257,8 @@ main {
     transform: translate(-50%, -50%);
 }
 
-
-
 /* NIGHT MODE */
 body.night {
-
     background-color: #000000;
     color: white;
 
@@ -271,8 +270,7 @@ body.night {
         border-top: 1px solid #333;
     }
 
-    .ui
-    {
+    .ui {
         border-top: 1px solid #333;
         border-bottom: 1px solid #333;
     }
